# tauri-vue-boilerplate

./: ARCHITECTURE.md  BACKEND_GUIDE.md  README.md  package-lock.json  package.json  todo_app.db  vite.config.js
public/viewer/: index.html
public/viewer/css/: hud.css
public/viewer/js/: EffectEngine.js  SceneLoader.js  StateManager.js  editor-controls.js  main.js
public/viewer/js/components/: ground-lock.js  hotspot.js  keyboard-look.js  panel.js
src/: App.vue  style.css
src-tauri/: .env  Cargo.toml  tauri.conf.json  todo_app.db
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs
src-tauri/src/commands/: auth_cmd.rs  mod.rs  project_cmd.rs
src-tauri/src/models/: mod.rs  user.rs
src-tauri/src/repositories/: mod.rs  user_repo.rs
src-tauri/src/services/: auth_svc.rs  mod.rs
src/assets/: main.css
src/components/: AppToast.vue  AuthLayout.vue  ConditionInput.vue  HotspotForm.vue  HotspotList.vue  PreviewPane.vue  SceneForm.vue  SceneList.vue  TestApi.vue
src/router/: index.js
src/stores/: assetStore.js  auth.js  tourStore.js
src/views/: EditorView.vue  HomeView.vue
src/views/auth/: ForgotPasswordView.vue  LoginView.vue  RegisterView.vue  ResetPasswordView.vue
