[package]
name = "ptah-studio360-desktop"
version = "0.1.0"
description = "Ptah Studio 360 — Desktop App"
authors = ["EtaScript"]
edition = "2021"

[lib]
name = "ptah_studio360_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
walkdir = "2"
base64 = "0.22"
