[package]
name = "todo-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "todo_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"


# SQLx para la base de datos
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
# Tokio es el entorno de ejecución asíncrono estándar de Rust
tokio = { version = "1", features = ["full"] }

# Email via SMTP (Mailtrap en desarrollo)
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls", "ring", "webpki-roots", "builder"] }
# Generación de tokens únicos
uuid = { version = "1", features = ["v4"] }
# Manejo de fechas para expiración de tokens
chrono = "0.4"
# Carga variables de entorno desde .env
dotenvy = "0.15"
